# policy-opa-pdp

./: .dockerignore  .gitreview  .golangci.yml  Dockerfile  INFO.yaml  Makefile  README.md  bom.xml  build_image.sh  coverage.out  go.mod  go.sum  groups  project.config  reviewers.config  sbom.xml  sonar-project.properties  version  version.properties
api/: openapi.yaml  (+2 more)
cfg/policy_opa_builder_chatbot/: Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini  version
cfg/policy_opa_builder_chatbot/app/: constants.py  main.py
cfg/policy_opa_builder_chatbot/app/api/: __init__.py  routes.py
cfg/policy_opa_builder_chatbot/app/chatbot_backend/: __init__.py  chat_context.py  chat_engine.py  chatbot.py  navigation.py
cfg/policy_opa_builder_chatbot/app/opa_validator/: rego_validator.py
cfg/policy_opa_builder_chatbot/app/parsers/: aai_parser.py  config.py  dataframe_builder.py  utils.py  yang_parser.py
cfg/policy_opa_builder_chatbot/app/rag_pipeline/: create_faiss.py  rag_context_builder.py  rag_docbuilder.py  rag_multiparam.py  rag_retriever.py  rego_generator.py
cfg/policy_opa_builder_chatbot/config/: config.json  config.py
cfg/policy_opa_builder_chatbot/dataset/: ManagedObjectsParameters_v1.xlsx  aai_oxm_v30.xml  usecase.json
cfg/policy_opa_builder_chatbot/dataset/Ericsson_G3G4_CXP2020502-2_R32C08_25Q2/: ericsson-aas-data-radio.yang  ericsson-adb-radio.yang  ericsson-alarm-port-radio.yang  ericsson-antenna-radio.yang  ericsson-authentication-server-rtn-radio.yang  ericsson-auto-recovery-radio.yang  ericsson-battery-backup-radio.yang  ericsson-battery-unit-radio.yang  ericsson-bfd-profile-rtn-radio.yang  ericsson-bfd-session-ipv4-rtn-radio.yang  ericsson-bfd-session-ipv6-rtn-radio.yang  ericsson-boot-sw-upgrade-radio.yang  ericsson-bridging-rtn-radio.yang  ericsson-cabinet-radio.yang  ericsson-capacity-usage-radio.yang  ericsson-cbrs-info-radio.yang  ericsson-cc-branch-radio.yang  ericsson-cc-link-radio.yang  ericsson-climate-radio.yang  ericsson-consumed-energy-measurement-radio.yang  ericsson-cpri-link-iq-data-radio.yang  ericsson-cprilink-supervision-radio.yang  ericsson-cprilink-tagging-radio.yang  ericsson-di-link-radio.yang  ericsson-di-port-radio.yang  ericsson-dot-group-config-radio.yang  ericsson-dot1x-authenticator-port-rtn-radio.yang  ericsson-dot1x-supplicant-rtn-radio.yang  ericsson-e-fuse-radio.yang  ericsson-ec-bus-radio.yang  ericsson-ec-port-radio.yang  ericsson-ecimcommon-radio.yang  ericsson-enclosure-radio.yang  ericsson-energy-measurement-radio.yang  ericsson-energy-meter-radio.yang  ericsson-equip-radio.yang  ericsson-equipment-discovery-radio.yang  ericsson-equipment-support-function-radio.yang  ericsson-ethernet-oam-rtn-radio.yang  ericsson-eum-radio.yang  (+162 more)
cfg/policy_opa_builder_chatbot/dataset/Ericsson_yang_2026-02-13_20-10_NR_25Q3/: ericsson-aas-data-radio.yang  ericsson-adb-radio.yang  (+203 more)
cfg/policy_opa_builder_chatbot/libs/: logs.py  utilities.py
cfg/policy_opa_builder_chatbot/test/: docker-compose.yml
(+600 files in other folders)
